<resources>
    <string name="app_name">Login</string>

    <string name="title_activity_splash_full_screen">SplashFullScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="home">Home</string>
    <string name="add_ticket">Add Ticket</string>
    <string name="map">Map</string>
    <string name="instructions">Instructions</string>
    <string name="settings">Settings</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Log Out</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="item_activity_titles">
        <item>Home</item>
        <item>Add Ticket</item>
        <item>Map</item>
        <item>Instructions</item>
        <item>Settings</item>
        <item>Contact us</item>
        <item>Log Out</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="btnSaveCaption">Save</string>
    <string name="rb_half">1/2 Hours</string>
    <string name="rb_one">1 hour</string>
    <string name="rb_two">2 hours</string>
    <string name="rb_three">3 hours</string>
    <string name="CarPlate_hint">Enter Car Plate</string>
    <string name="todo">TODO</string>

</resources>
