<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="com.example.macstudent.login.TicketActivity">

    <EditText
        android:id="@+id/edtCarPlate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"

        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:hint="@string/CarPlate_hint"
        android:inputType="textPersonName" />

    <Spinner
        android:id="@+id/spinCompany"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/colorAccent"
        android:layout_below="@id/edtCarPlate"
        android:layout_alignLeft="@id/edtCarPlate"
        android:layout_alignStart="@id/edtCarPlate"
        />

    <RadioGroup
        android:id="@+id/rdoTime"
        android:layout_below="@id/spinCompany"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rdoHalfHour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/rb_half" />

        <RadioButton
            android:id="@+id/rdoOneHour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rb_one" />

        <RadioButton
            android:id="@+id/rdoTwoHour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rb_two" />

        <RadioButton
            android:id="@+id/rdoThreeHour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rb_three" />
    </RadioGroup>

    <TextView
        android:id="@+id/txtAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/rdoTime"
        android:layout_alignEnd="@id/spinCompany"
        android:layout_alignRight="@id/spinCompany"
        android:layout_below="@id/spinCompany"
        android:layout_margin="10dp"
        android:layout_toEndOf="@id/rdoTime"
        android:layout_toRightOf="@id/rdoTime"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:text="$ 5"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinLot"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/rdoTime"
        android:layout_alignLeft="@id/rdoTime"
        android:layout_alignStart="@id/rdoTime"
        android:layout_alignRight="@id/rdoTime"
        android:layout_alignEnd="@id/rdoTime"
        />

    <Spinner
        android:id="@+id/spinSpot"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/txtAmount"
        android:layout_alignLeft="@id/txtAmount"
        android:layout_alignStart="@id/txtAmount"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        />

    <Spinner
        android:id="@+id/spinPayment"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/spinSpot"
        android:layout_alignLeft="@id/spinLot"
        android:layout_alignStart="@id/spinLot"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        />

    <TextView
        android:id="@+id/txtDateTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinPayment"
        android:background="@color/colorPrimary"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtDateTime"
        android:text="@string/btnSaveCaption" />


</RelativeLayout>
